ostree dead, use dirs
